# intro_test_runner

./: .gitignore  README.md  llm-setup.sh  pyproject.toml
src/intro_test_runner/: __init__.py  __main__.py  _check_io.py  _cmd_line.py  _external_progs.py  _faces.py  _internal_checks.py  _utils.py  pytestplugin.py
